--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </div>
 
-    <img src="img/imga/caraibeannew.jpg" alt="Bahamas">
+    <img src=".img/imga/caraibeannew.jpg" alt="Bahamas">
 
 
 
