--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 Paradise Island, The Exumas, Bimini, Grand Bahama,
                 Eleuthera and The Abaco Islands.</p>
 
-            <img style="display: block; margin-left: auto; margin-right: auto; width: 90%;" src="user-images.githubusercontent.com/122342928/241783314-57a7cc96-038e-4f10-af47-26b1228a329f.jpg"
+            <img style="display: block; margin-left: auto; margin-right: auto; width: 90%;" src="user-images.githubusercontent.com/12234292…41783306-ac06a2f9-7137-4311-bd43-ab017780f956.png"
                 alt="visit bahamas">
             <p>
                 What is the best place to stay in the Bahamas? Well,
