--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </div>
 
-    <img src="user-images.githubusercontent.com/122342928/241783333-f5de39b9-b487-4914-973d-fe50af8acca1.jpg" alt="Bahamas">
+    <img src="./user-images.githubusercontent.com/122342928/241783333-f5de39b9-b487-4914-973d-fe50af8acca1.jpg" alt="Bahamas">
 
 
 
