--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <div class="navbar">
-        <img class="logo-img" src="img/imga/sandlogo.png" width="130" height="63" alt="sandlogo">
+        <img class="logo-img" src="img/imga/Sandlogo.png" width="130" height="63" alt="sandlogo">
 
         <a class="active" href="/"><strong>HOME</strong></a>
         <a href="http://127.0.0.1:3000/simplemenu/firstarticle.html"><strong>BLOG</strong></a>
