--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </div>
 
-    <img src="https://user-images.githubusercontent.com/122342928/241783333-f5de39b9-b487-4914-973d-fe50af8acca1.jpg" alt="Bahamas">
+    <img src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/bb6a9ed6-bebd-4b93-93b2-44ba4dd6295b" alt="Bahamas">
 
 
 
