--- a/guidetours.html
+++ b/guidetours.html
@@ -18,7 +18,7 @@
     <!--Set body-->
     <div class="body">
         <div class="navbar">
-            <img class="logo-img" src="img/imga/sandlogo.png" width="130" height="63" alt="sandlogo">
+            <img class="logo-img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/a0488ead-58ec-4580-8366-3ae2e7b2692a" width="130" height="63" alt="sandlogo">
 
             <a class="active" href="/"><strong>HOME</strong></a>
             <a href="http://127.0.0.1:3000/simplemenu/firstarticle.html"><strong>BLOG</strong></a>
