--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
         <a class="active" href="/"><strong>HOME</strong></a>
         <a href="http://127.0.0.1:3000/simplemenu/firstarticle.html"><strong>BLOG</strong></a>
-        <a href="http://127.0.0.1:3000simplemenucontact.html"><strong>CONTACT</strong></a>
-        <a href="https://github.com/victorstef21/victorstef21.github.io/blob/main/guidetours.html"><strong>GUIDE TOURS</strong></a>
+        <a href="http://127.0.0.1:3000/simplemenu/contact.html"><strong>CONTACT</strong></a>
+        <a href="[GUIDETOURS]http://127.0.0.1:3000/simplemenu/guidetours.html"><strong>GUIDE TOURS</strong></a>
 
     </div>
 
