--- a/guidetours.html
+++ b/guidetours.html
@@ -23,7 +23,7 @@
             <a class="active" href="/"><strong>HOME</strong></a>
             <a href="http://127.0.0.1:3000/simplemenu/firstarticle.html"><strong>BLOG</strong></a>
             <a href="http://127.0.0.1:3000/simplemenu/contact.html"><strong>CONTACT</strong></a>
-            <a href="http://127.0.0.1:3000/simplemenu/guidetours.html"><strong>GUIDE TOURS</strong></a>
+            <a href="http://127.0.0.1:3002/guidetours.html"><strong>GUIDE TOURS</strong></a>
 
         </div>
 
