--- a/guidetours.html
+++ b/guidetours.html
@@ -30,7 +30,7 @@
 
         <div>
 
-            <img src="img/imga/guidetours.jpeg" alt="ContactMe" style="width: 100%; height: 500px; text-align: center;">
+            <img src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/73446191-ca63-46fe-aefa-cf5bb052db8e" alt="guidetours" style="width: 100%; height: 500px; text-align: center;">
 
         </div>
 
