--- a/guidetours.html
+++ b/guidetours.html
@@ -36,7 +36,7 @@
 
         <div class="wrap">
             <div class="box1">
-                <img class="img" src="img/imga/images.jpeg" alt="">
+                <img class="img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/92db11db-6b0c-4915-8944-2bdbbd8b68b6" alt="">
                 <button class="bt">DESTINATION</button>
                 <h1>What Is Club Mobay & Is It Worth The Extra Cost?</h1>
                 <p>Jamaica is a place that many people hope to visit at least once in their lifetime.
