--- a/guidetours.html
+++ b/guidetours.html
@@ -36,7 +36,7 @@
 
         <div class="wrap">
             <div class="box1">
-                <img class="img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/92db11db-6b0c-4915-8944-2bdbbd8b68b6" alt="">
+                <img class="img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/92db11db-6b0c-4915-8944-2bdbbd8b68b6" alt="images">
                 <button class="bt">DESTINATION</button>
                 <h1>What Is Club Mobay & Is It Worth The Extra Cost?</h1>
                 <p>Jamaica is a place that many people hope to visit at least once in their lifetime.
@@ -47,7 +47,7 @@
             </div>
 
             <div class="box2">
-                <img class="img" src="img/imga/jamaica.jpg" alt="holiday">
+                <img class="img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/f405153b-5fda-4222-97d3-7b71e09c28ad" alt="jamaica">
                 <button class="bt1">ATTRACTION</button>
                 <h2>Top 5 Things to do in The Bahamas</h2>
                 <p>What do you think of when someone says The Bahamas; idyllic white sands,
@@ -59,7 +59,7 @@
             </div>
 
             <div class="box3">
-                <img class="img" src="img/imga/maldive.jpg" alt="resort">
+                <img class="img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/39a1e950-ea97-4a10-b6d5-9a27967a5a08" alt="maldive">
                 <button class="bt">GUIDE&TOURS</button>
                 <h2>Renewing Your Wedding Vows In A Sandals Resort: Guest Review</h2>
                 <p>When Hays travel agent Cathy Leverett and her husband Nick got married 30 years ago,
@@ -70,7 +70,7 @@
             </div>
             <!--Also 1 more-->
             <div class="box1">
-                <img class="img" src="img/imga/Curacoa.jpg" alt="">
+                <img class="img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/c41b38b8-fd05-4193-8ef1-81874ad8c1bb" alt="curacoa">
                 <button class="bt">ACTIVITIES</button>
                 <h1>Things To Do In Curaçao - Here is Our Top 54!</h1>
                 <p>Curaçao is a place that many people hope to visit at least once in their lifetime.
@@ -81,7 +81,7 @@
             </div>
             <!--Also 2 more-->
             <div class="box1">
-                <img class="img" src="img/imga/ScubaDiversHP.jpg" alt="">
+                <img class="img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/f596bc72-8973-4b72-8b39-d2ab3e04a82f" alt="scubadivershp">
                 <button class="bt">DESTINATION</button>
                 <h1>Scuba Diving In Antigua: What To Expect?</h1>
                 <p>Antigua is a place that many people hope to visit at least once in their lifetime.
@@ -92,7 +92,7 @@
             </div>
             <!--last-->
             <div class="box1">
-                <img class="img" src="img/imga/fooddrink.jpg" alt="">
+                <img class="img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/b0804d19-796c-4064-8555-aabf6ecb8e05" alt="fooddrink">
                 <button class="bt">FOOD & DRINK</button>
                 <h1>Enjoy These 32 Popular Local Beers In The Caribbean</h1>
                 <p>Jamaica is a place that many people hope to visit at least once in their lifetime.
