--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <!--Set body-->
     <div class="body">
         <div class="navbar">
-            <img class="logo-img" src="img/imga/sandlogo.png" width="130" height="63" alt="sandlogo">
+            <img class="logo-img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/a0488ead-58ec-4580-8366-3ae2e7b2692a" width="130" height="63" alt="sandlogo">
 
             <a class="active" href="/"><strong>HOME</strong></a>
             <a href="http://127.0.0.1:3000/simplemenu/firstarticle.html"><strong>BLOG</strong></a>
@@ -31,7 +31,7 @@
 
         <div>
 
-            <img src="img/imga/sandacontact.png" alt="ContactMe"
+            <img src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/0ceb1e03-4647-4a5f-83c0-15c0ae96ed2f" alt="sandacontact"
                 style="width: 100%; height: 350px; text-align: center;">
 
         </div>
@@ -48,7 +48,7 @@
 
         <div class="sidebar">
 
-            <img src="img/imga/sandalscouple.jpg" alt="ContactUs"
+            <img src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/22377d10-5d07-4771-953a-b07b6c48174c" alt="sandalcouple"
                 style="width: 80%; margin-top: 0.5em; margin-left: 0.5em;">
         </div>
 
