--- a/firstarticle.html
+++ b/firstarticle.html
@@ -18,7 +18,7 @@
 
 
     <div class="navbar">
-        <img class="logo-img" src="img/imga/sandlogo.png" width="130" height="63" alt="sandlogo">
+        <img class="logo-img" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/a0488ead-58ec-4580-8366-3ae2e7b2692a" width="130" height="63" alt="sandlogo">
 
         <a class="active" href="/"><strong>HOME</strong></a>
         <a href="http://127.0.0.1:3000/simplemenu/firstarticle.html"><strong>BLOG</strong></a>
@@ -27,7 +27,7 @@
 
     </div>
 
-    <img src="img/imga/firstarticleimage.jpg" alt="Bahamas">
+    <img src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/845f6171-a0a0-467e-9a11-6d13c09a7abc" alt="firstarticleimage">
 
 
 
@@ -53,8 +53,8 @@
                 Eleuthera and The Abaco Islands.</p>
 
             <img style="display: block; margin-left: auto;
-             margin-right: auto; width: 90%;" src="img/imga/bahamasme.jpg"
-                alt="visit bahamas">
+             margin-right: auto; width: 90%;" src="https://github.com/victorstef21/victorstef21.github.io/assets/122342928/57a7cc96-038e-4f10-af47-26b1228a329f"
+                alt="visit bahamasme">
             <p>
                 What is the best place to stay in the Bahamas? Well,
                 thats a tough question considering every island of the Bahamas is unique,
